--- a/1.env
+++ b/1.env
@@ -25,7 +25,7 @@ LANGUAGE='en'
 
 # custom stream quality for the bot in groups
 # optional
-QUALITY='high'
+QUALITY='low'
 
 # default stream mode for the bot in groups
 # optional
