--- a/1.env
+++ b/1.env
@@ -17,7 +17,7 @@ SUDOERS='162713018'
 
 # command prefix (separate with space)
 # optional
-PREFIX='. !'
+PREFIX='. ! /'
 
 # default language for the bot in groups
 # optional
