--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,15 @@
-version: "4"
+version: "3.10"
 services:
   worker:
     build: .
     environment:
-      API_ID: $API_ID
-      API_HASH: $API_HASH
-      BOT_TOKEN: $BOT_TOKEN
-      SESSION: $SESSION
-      SUDOERS: $SUDOERS
-      MUSIC_BOT_NAME: $MUSIC_BOT_NAME
-      QUALITY: $QUALITY
-      PREFIX: $PREFIX
-      LANGUAGE: $LANGUAGE
-      STREAM_MODE: $STREAM_MODE
-      ADMINS_ONLY: $ADMINS_ONLY
-      SERVER_PLAYLIST_LIMIT: $SERVER_PLAYLIST_LIMIT
-      PLAYLIST_FETCH_LIMIT: $PLAYLIST_FETCH_LIMIT
-      CLEANMODE_MINS: $CLEANMODE_MINS
-      SUPPORT_CHANNEL: $SUPPORT_CHANNEL
-      SUPPORT_GROUP: $SUPPORT_GROUP
-      TG_AUDIO_FILESIZE_LIMIT: $TG_AUDIO_FILESIZE_LIMIT
-      TG_VIDEO_FILESIZE_LIMIT: $TG_VIDEO_FILESIZE_LIMIT
-      PRIVATE_BOT_MODE: $PRIVATE_BOT_MODE
-      YOUTUBE_EDIT_SLEEP: $YOUTUBE_EDIT_SLEEP
-      TELEGRAM_EDIT_SLEEP: $TELEGRAM_EDIT_SLEEP
-      AUTO_LEAVING_ASSISTANT: $AUTO_LEAVING_ASSISTANT
-      ASSISTANT_LEAVE_TIME: $ASSISTANT_LEAVE_TIME
-      AUTO_DOWNLOADS_CLEAR: $AUTO_DOWNLOADS_CLEAR
-      AUTO_SUGGESTION_MODE: $AUTO_SUGGESTION_MODE
-      AUTO_SUGGESTION_TIME: $AUTO_SUGGESTION_TIME
-      SPOTIFY_CLIENT_ID: $SPOTIFY_CLIENT_ID
-      SPOTIFY_CLIENT_SECRET: $SPOTIFY_CLIENT_SECRET
-      HEROKU_API_KEY: $HEROKU_API_KEY
-      HEROKU_APP_NAME: $HEROKU_APP_NAME
-      UPSTREAM_REPO: $UPSTREAM_REPO
-      UPSTREAM_BRANCH: $UPSTREAM_BRANCH
-      GIT_TOKEN: $GIT_TOKEN
-      GITHUB_REPO: $GITHUB_REPO
-      START_IMG_URL: $START_IMG_URL
-      PING_IMG_URL: $PING_IMG_URL
-      PLAYLIST_IMG_URL: $PLAYLIST_IMG_URL
-      GLOBAL_IMG_URL: $GLOBAL_IMG_URL
-      STATS_IMG_URL: $STATS_IMG_URL
-      TELEGRAM_AUDIO_URL: $TELEGRAM_AUDIO_URL
-      TELEGRAM_VIDEO_URL: $TELEGRAM_VIDEO_URL
-      STREAM_IMG_URL: $STREAM_IMG_URL
-      SOUNCLOUD_IMG_URL: $SOUNCLOUD_IMG_URL
-      YOUTUBE_IMG_URL: $YOUTUBE_IMG_URL
-      SPOTIFY_ARTIST_IMG_URL: $SPOTIFY_ARTIST_IMG_URL
-      SPOTIFY_ALBUM_IMG_URL: $SPOTIFY_ALBUM_IMG_URL
-      SPOTIFY_PLAYLIST_IMG_URL: $SPOTIFY_PLAYLIST_IMG_URL
-      PREFIX2: $PREFIX2
-      PREFIX3: $PREFIX3
-      PREFIX4: $PREFIX4
-      PREFIX5: $PREFIX5
+      - API_ID=${API_ID}
+      - API_HASH=${API_HASH}
+      - SESSION=${SESSION}
+      - QUALITY=${QUALITY}
+      - SUDOERS=${SUDOERS}
+      - PREFIX=${PREFIX}
+      - LANGUAGE=${LANGUAGE}
+      - ADMINS_ONLY=${ADMINS_ONLY}
+      - SPOTIFY_CLIENT_ID=${SPOTIFY_CLIENT_ID}
+      - SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET}
