--- a/1.env
+++ b/1.env
@@ -9,7 +9,7 @@ SESSION='AQBpsLeaZBNcUFKFLDYPIEUyojz_ZYqAv7wsESAlNppdGaaDvVFf6XVGEyu9G-bG14arAyY
 
 # telegram bot token (from @botfather)
 #optional
-BOT_TOKEN=''
+BOT_TOKEN='5268778663:AAHrbEZ3ZPr4UWdtALN5aLyDC6oCMEeZc00'
 
 # sudo user ids (separate with space)
 # optional
